--- a/shared/css/custom_styles.css
+++ b/shared/css/custom_styles.css
@@ -1610,63 +1610,12 @@ input#readMore_check_id {display:none;}
 	display:none;
 }
 
-
-[role="tablist"] {
-  margin: 0 0 -0.1em;
-  overflow: visible;
+.tab-card-header > .nav-tabs > li > a.active:focus {
+    border-top: 2px solid red;
 }
-
-[role="tab"] {
-  position: relative;
-  margin: 0;
-  padding: 0.3em 0.5em 0.4em;
-  border: 1px solid hsl(219, 1%, 72%);
-  border-radius: 0.2em 0.2em 0 0;
-  box-shadow: 0 0 0.2em hsl(219, 1%, 72%);
-  overflow: visible;
-  font-family: inherit;
-  font-size: inherit;
-  background: hsl(220, 20%, 94%);
+.tab-card-header > .nav-tabs > li > a:focus {
+    border-top: 2px solid blue;
 }
-
-[role="tab"]:hover::before,
-[role="tab"]:focus::before,
-[role="tab"][aria-selected="true"]::before {
-  border-radius: 0.2em 0.2em 0 0;
-  border-top: 3px solid hsl(20, 96%, 48%);
-  content: "";
-}
-
-[role="tab"][aria-selected="true"] {
-  border-radius: 0;
-  background: hsl(220, 43%, 99%);
-  outline: 0;
-}
-
-[role="tab"][aria-selected="true"]:not(:focus):not(:hover)::before {
-  border-top: 5px solid hsl(218, 96%, 48%);
-}
-
-[role="tab"][aria-selected="true"]::after {
-  background: hsl(220, 43%, 99%);
-  box-shadow: none;
-  content: "";
-}
-
-[role="tab"]:hover,
-[role="tab"]:focus,
-[role="tab"]:active {
-  outline: 0;
-  border-radius: 0;
-  color: inherit;
-}
-
-[role="tab"]:hover::before,
-[role="tab"]:focus::before {
-  border-color: hsl(20, 96%, 48%);
-}
-
-
 
 
 
