--- a/shared/css/custom_styles.css
+++ b/shared/css/custom_styles.css
@@ -1611,7 +1611,7 @@ input#readMore_check_id {display:none;}
 }
 .tab-card-header > .nav-tabs > li > a.active:focus,
 .tab-card-header > .nav-tabs > li > a.active {
-    border-top: 3px solid #ffffff;
+    border-top: 3px solid #495057;
 }
 .tab-card-header > .nav-tabs > li > a:focus {
     border-top: 3px solid #007bff;
