--- a/shared/css/custom_styles.css
+++ b/shared/css/custom_styles.css
@@ -1609,7 +1609,9 @@ input#readMore_check_id {display:none;}
 	opacity: 0.99;
 	display:none;
 }
-.tab-card-header > .nav-tabs > li > a { border-top: 3px solid #deebec;}
+.tab-card-header > .nav-tabs > li > a { 
+	border-top: 2px solid #deebec;
+}
 .tab-card-header > .nav-tabs > li > a.active:focus,
 .tab-card-header > .nav-tabs > li > a.active {
     border-top: 3px solid #495057;
