--- a/shared/css/custom_styles.css
+++ b/shared/css/custom_styles.css
@@ -997,7 +997,7 @@ table.inputTable tr {
 	margin-right: 2px;
 	background-color: #3E6F7D;
 }
-.tab-card-header > .nav-tabs > li > a {
+.tab-card-header > .nav-tabs > li > button {
 	border: 0;
 	margin-right: 0;
 	color: #3e6f7d!important;
@@ -1015,21 +1015,31 @@ table.inputTable tr {
 	background-color: #ffffff; 
 	padding: .5rem 0;
 }
-.header > .nav-tabs > li > a.active, .nav-tabs .nav-item.show .nav-link, .nav-tabs .nav-link.active {
+.header > .nav-tabs > li > button.active, .nav-tabs .nav-item.show .nav-link, .nav-tabs .nav-link.active {
 	background-color: #f5f5f5;
 	border-bottom: 2px solid #f5f5f5;
 	outline:0;
 	margin-bottom: -1px;
 }
-.tab-card-header > .nav-tabs > li > a:hover {
+.tab-card-header > .nav-tabs > li > button:hover {
 	color: #3E657D;
 	outline:0;
 }
-.tab-card-header > .nav-tabs > li > a:focus {
+.tab-card-header > .nav-tabs > li > button:focus {
 	color: #3E657D;
 	background-color: #f5f5f5;
 	outline: 0;
 	box-shadow:none;
+}
+.tab-card-header > .nav-tabs > li > a { 
+	border-top: 2px solid #deebec;
+}
+.tab-card-header > .nav-tabs > li > button.active:focus,
+.tab-card-header > .nav-tabs > li > button.active {
+    border-top: 3px solid #495057;
+}
+.tab-card-header > .nav-tabs > li > button:focus, .tab-card-header > .nav-tabs > li > button:hover {
+    border-top: 3px solid #007bff;
 }
  .tab-content {
 	padding-bottom: 0;
@@ -1609,16 +1619,7 @@ input#readMore_check_id {display:none;}
 	opacity: 0.99;
 	display:none;
 }
-.tab-card-header > .nav-tabs > li > a { 
-	border-top: 2px solid #deebec;
-}
-.tab-card-header > .nav-tabs > li > a.active:focus,
-.tab-card-header > .nav-tabs > li > a.active {
-    border-top: 3px solid #495057;
-}
-.tab-card-header > .nav-tabs > li > a:focus, .tab-card-header > .nav-tabs > li > a:hover {
-    border-top: 3px solid #007bff;
-}
+
 
 
 
