--- a/shared/css/custom_styles.css
+++ b/shared/css/custom_styles.css
@@ -997,7 +997,7 @@ table.inputTable tr {
 	margin-right: 2px;
 	background-color: #3E6F7D;
 }
-.tab-card-header > .nav-tabs > li > button {
+.tab-card-header > .nav-tabs > li > a {
 	border: 0;
 	margin-right: 0;
 	color: #3e6f7d!important;
@@ -1015,18 +1015,18 @@ table.inputTable tr {
 	background-color: #ffffff; 
 	padding: .5rem 0;
 }
-.header > .nav-tabs > li > button.active, .nav-tabs .nav-item.show .nav-link, .nav-tabs .nav-link.active {
+.header > .nav-tabs > li > a.active, .nav-tabs .nav-item.show .nav-link, .nav-tabs .nav-link.active {
 	background-color: #f5f5f5;
 	border-bottom: 2px solid #f5f5f5;
 	outline:0;
 	margin-bottom: -1px;
 }
 
-.tab-card-header > .nav-tabs > li > button:hover {
+.tab-card-header > .nav-tabs > li > a:hover {
 	color: #3E657D;
 	outline:0;
 }
-.tab-card-header > .nav-tabs > li > button:focus {
+.tab-card-header > .nav-tabs > li > a:focus {
 	color: #3E657D;
 	background-color: #f5f5f5;
 	outline: 0;
@@ -1035,11 +1035,11 @@ table.inputTable tr {
 .tab-card-header > .nav-tabs > li > a { 
 	border-top: 2px solid #deebec;
 }
-.tab-card-header > .nav-tabs > li > button.active:focus,
-.tab-card-header > .nav-tabs > li > button.active {
+.tab-card-header > .nav-tabs > li > a.active:focus,
+.tab-card-header > .nav-tabs > li > a.active {
     border-top: 3px solid #ffffff;
 }
-.tab-card-header > .nav-tabs > li > button:focus, .tab-card-header > .nav-tabs > li > button:hover {
+.tab-card-header > .nav-tabs > li > a:focus, .tab-card-header > .nav-tabs > li > a:hover {
     border-top: 3px solid #007bff;
 }
  .tab-content {
