--- a/shared/css/custom_styles.css
+++ b/shared/css/custom_styles.css
@@ -1022,24 +1022,24 @@ table.inputTable tr {
 	margin-bottom: -1px;
 }
 
-.tab-card-header > .nav-tabs > li > a:hover {
+.tab-card-header > .nav-tabs > li > button:hover {
 	color: #3E657D;
 	outline:0;
 }
-.tab-card-header > .nav-tabs > li > a:focus {
+.tab-card-header > .nav-tabs > li > button:focus {
 	color: #3E657D;
 	background-color: #f5f5f5;
 	outline: 0;
 	box-shadow:none;
 }
-.tab-card-header > .nav-tabs > li > a { 
+.tab-card-header > .nav-tabs > li > button { 
 	border-top: 2px solid #deebec;
 }
-.tab-card-header > .nav-tabs > li > a.active:focus,
-.tab-card-header > .nav-tabs > li > a.active {
+.tab-card-header > .nav-tabs > li > button.active:focus,
+.tab-card-header > .nav-tabs > li > button.active {
     border-top: 3px solid #ffffff;
 }
-.tab-card-header > .nav-tabs > li > a:focus, .tab-card-header > .nav-tabs > li > button:hover {
+.tab-card-header > .nav-tabs > li > button:focus, .tab-card-header > .nav-tabs > li > button:hover {
     border-top: 3px solid #007bff;
 }
  .tab-content {
