ISSUE  687  PUROSE:  Specimen details styles  DESC:  parts -- font-weight: 500

--- a/shared/css/custom_styles.css
+++ b/shared/css/custom_styles.css
@@ -1216,6 +1216,9 @@ form.keyword {
     vertical-align: top;
     border-top: 1px solid #dee2e6;
 }
+#collapseParts .table th {
+	font-weight: 500;
+}
 /**********************************************************/
 /*Small Form fields--example: Data Entry page *************/
 /**********************************************************/
