--- a/shared/css/custom_styles.css
+++ b/shared/css/custom_styles.css
@@ -48,18 +48,19 @@ a.external:hover:visited:after {
 	text-decoration: none !important;
 	content: "\a0" url(/shared/images/linkOutHover.gif);
 }
-.imgsize:first-child {
-	width: 98.8%;
-	margin: 0 1.2%;
-}
 .imgsize:nth-child(even) {
 	width: 48%;
 	margin-left: 2%;
 }
 .imgsize:nth-child(odd) {
 	width: 48.8%;
-	margin-left: 1.2%;
+	margin-right: 1.2%;
 }
+.imgsize:first-child {
+	width: 98.8%;
+	margin: 0 1.2%;
+}
+
 /*********************************************/
 /* BELOW  Misc. Additions to Bootstrap Styles*/
 /*********************************************/
