--- a/shared/css/custom_styles.css
+++ b/shared/css/custom_styles.css
@@ -54,7 +54,7 @@ a.external:hover:visited:after {
 }
 .imgsize:nth-child(odd) {
 	width: 32%;
-	margin-left: 2%;
+	margin: 2%;
 }
 .imgsize:first-child {
 	width: 100%;
