ISSUE  687  PUROSE:  Specimen details styles  DESC: Media

--- a/shared/css/custom_styles.css
+++ b/shared/css/custom_styles.css
@@ -60,6 +60,7 @@ a.external:hover:visited:after {
 .imgsize:first-child {
 	width: 100%;
 	margin: 0;
+	display:none;
 }
 
 /*********************************************/
