--- a/shared/css/custom_styles.css
+++ b/shared/css/custom_styles.css
@@ -57,11 +57,11 @@ a.external:hover:visited:after {
 	margin-left: 2%;
 	margin-right: 2%;
 }
-.imgsize:first-child {
+/*.imgsize:first-child {
 	width: 100%;
 	margin: 0;
 	display:none;
-}
+}*/
 
 /*********************************************/
 /* BELOW  Misc. Additions to Bootstrap Styles*/
