ISSUE  687  PUROSE:  Specimen details styles  DESC: media

--- a/shared/css/custom_styles.css
+++ b/shared/css/custom_styles.css
@@ -48,11 +48,11 @@ a.external:hover:visited:after {
 	text-decoration: none !important;
 	content: "\a0" url(/shared/images/linkOutHover.gif);
 }
-.thumbnails.imgsize:nth-child(even) {
+.imgsize:nth-child(even) {
 	width: 30%;
 	margin: 0 1%;
 }
-.thumbnails .imgsize:nth-child(odd) {
+ .imgsize:nth-child(odd) {
 	width: 30%;
 	margin: 0 1%;
 }
