ISSUE  687  PUROSE:  Specimen details styles  DESC: table

--- a/shared/css/custom_styles.css
+++ b/shared/css/custom_styles.css
@@ -60,7 +60,7 @@ a.external:hover:visited:after {
 	width: 100%;
 	margin: 0 1%;
 }
-
+table {font-size: 0.875rem;}
 
 /*********************************************/
 /* BELOW  Misc. Additions to Bootstrap Styles*/
