ISSUE  687  PUROSE:  Specimen details styles  DESC:  table font

--- a/shared/css/custom_styles.css
+++ b/shared/css/custom_styles.css
@@ -61,6 +61,7 @@ a.external:hover:visited:after {
 	margin: 0 1%;
 }
 table {font-size: 0.875rem;}
+table td .small {font-size: 90%}
 
 /*********************************************/
 /* BELOW  Misc. Additions to Bootstrap Styles*/
