ISSUE  687  PUROSE:  Specimen details styles  DESC:  attributes

--- a/shared/css/custom_styles.css
+++ b/shared/css/custom_styles.css
@@ -503,7 +503,7 @@ li.pid { padding-left:0;}
 }
 
 .list-group-item {
-	padding: 0.25rem .5rem;
+	padding: 0.25rem .5rem 0 .5rem;
 }
 li.pid {
 	color: #666;
