--- a/shared/css/custom_styles.css
+++ b/shared/css/custom_styles.css
@@ -25,7 +25,9 @@ input.goodPick, select.goodPick, textarea.goodPick {
 .small90 {
 	font-size: 89%
 }
-.font-weight-lessbold {font-weight: 500;}
+.font-weight-lessbold {
+	font-weight: 500;
+}
 a {cursor: pointer}
 
 /** Styling of external links out, shared with production **/
