--- a/shared/css/custom_styles.css
+++ b/shared/css/custom_styles.css
@@ -1047,7 +1047,7 @@ table.inputTable tr {
 	padding-bottom: 0;
 	border: 4px solid #3e657d;
 	 border-top: none;
-	border-radius: .5rem;
+	border-radius: 0 0 .5rem .5rem;
 	 background-color: #f5f5f5;
 }
 .bg-blue-gray {background-color: #deebec;}
