--- a/shared/css/custom_styles.css
+++ b/shared/css/custom_styles.css
@@ -1700,7 +1700,7 @@ padding: .75rem .5rem .5rem .5rem;
   cursor: pointer;
 }
 .card-header {
-	padding: .25rem .75rem;
+	padding: .5rem .75rem .25rem .75rem;
 }
 div[aria-hidden='true'] {
    display: none;
