--- a/shared/css/custom_styles.css
+++ b/shared/css/custom_styles.css
@@ -1662,6 +1662,28 @@ padding: .75rem .5rem .5rem .5rem;
 }
 .tabs button {
 	border-color: 0;
+	    appearance: auto;
+    -webkit-writing-mode: horizontal-tb !important;
+    text-rendering: auto;
+    color: -internal-light-dark(black, white);
+    letter-spacing: normal;
+    word-spacing: normal;
+    text-transform: none;
+    text-indent: 0px;
+    text-shadow: none;
+    display: inline-block;
+    text-align: center;
+    align-items: flex-start;
+    cursor: default;
+    background-color: #f5f5f5;
+    box-sizing: border-box;
+    margin: 0em;
+    font: 400 13.3333px Arial;
+    padding: 1px 6px;
+    border-width: 2px;
+    border-style: outset;
+    border-color: 1px solid #deebec;
+    border-image: initial;
 }
 .tab-content {
     border-top: none;
