--- a/shared/css/custom_styles.css
+++ b/shared/css/custom_styles.css
@@ -1678,11 +1678,11 @@ padding: .75rem .5rem .5rem .5rem;
     background-color: #f5f5f5;
     box-sizing: border-box;
     margin: 0em;
-    font: 400 13.3333px Arial;
+    font: 400 .9rem Arial;
     padding: 1px 6px;
     border-width: 2px;
     border-style: outset;
-    border-color: 1px solid #deebec;
+    border-color: #deebec;
     border-image: initial;
 }
 .tab-content {
