--- a/shared/css/custom_styles.css
+++ b/shared/css/custom_styles.css
@@ -1660,9 +1660,25 @@ input#readMore_check_id {display:none;}
 background-color: #3e657d;
 padding: .75rem .5rem .5rem .5rem;	
 }
-.tabs button {
+
+.tab-content {
+    border-top: none;
+    border-radius: 0;
+    background-color: #f5f5f5;
+    margin-bottom: 0.2rem;
+}
+
+.tab-card-header {
+    background-color: #3E6F7D;
+    padding-top: .5rem;
+    border-radius: 4px 4px 0 0;
+}
+.tab-headers {
+	padding: 0 .5rem;	
+}
+.tab-headers button {
 	border-color: 0;
-	    appearance: auto;
+	 appearance: auto;
     -webkit-writing-mode: horizontal-tb !important;
     text-rendering: auto;
     color: -internal-light-dark(black, white);
@@ -1684,21 +1700,6 @@ padding: .75rem .5rem .5rem .5rem;
     border-style: outset;
     border-color: #deebec;
     border-image: initial;
-}
-.tab-content {
-    border-top: none;
-    border-radius: 0;
-    background-color: #f5f5f5;
-    margin-bottom: 0.2rem;
-}
-
-.tab-card-header {
-    background-color: #3E6F7D;
-    padding-top: .5rem;
-    border-radius: 4px 4px 0 0;
-}
-.tab-headers {
-	padding: 0 .5rem;	
 }
 .tab-headers button {
     background-color:#f5f5f5;
