Issue 754  Keyboard and accessible navigation for tabs on search pages (transactions, specimens)

--- a/shared/css/custom_styles.css
+++ b/shared/css/custom_styles.css
@@ -1696,7 +1696,7 @@ padding: .75rem .5rem .5rem .5rem;
     margin: 0em;
     font: 400 .9rem Arial;
     padding: 1px 6px;
-    border-width: 1px;
+    border-width: 0;
     border-style: solid;
     border-color: #deebec;
     border-image: initial;
