--- a/shared/css/custom_styles.css
+++ b/shared/css/custom_styles.css
@@ -1704,6 +1704,7 @@ padding: .75rem .5rem .5rem .5rem;
 .tab-headers button {
     background-color:#f5f5f5;
 	padding: .25rem 1rem;
+	margin: 0 .25rem 0 0;
 	border-top-left-radius: .25rem;
 	border-top-right-radius: .25rem;
 }
