--- a/shared/css/custom_styles.css
+++ b/shared/css/custom_styles.css
@@ -1734,6 +1734,8 @@ input#readMore_check_id {
 	border-top: 3px solid white;
 	border-bottom: 1px solid #f5f5f5;
 	cursor: pointer;
+	border-right: 1px solid white;
+    border-left: 1px solid white;
 }
 .tab-headers button[aria-selected='false'] {
 	color: black;
@@ -1741,6 +1743,8 @@ input#readMore_check_id {
 	border-bottom: 1px solid #3e657D;
 	border-top: 3px solid #deebec;
 	cursor: pointer;
+		border-right: 1px solid #deebec;
+    border-left: 1px solid #deebec;
 }
 .card-header {
 	padding: .5rem .25rem 0rem .25rem;
