--- a/shared/css/custom_styles.css
+++ b/shared/css/custom_styles.css
@@ -1650,6 +1650,7 @@ input#readMore_check_id {display:none;}
 	border-radius: 0;
 	background-color: #f5f5f5;
 	margin-bottom: 0.2rem;
+	padding: 0 1rem;
 }
 .tab-card-header {
 	background-color: #3E6F7D;
