--- a/shared/css/custom_styles.css
+++ b/shared/css/custom_styles.css
@@ -1643,13 +1643,12 @@ input#readMore_check_id {display:none;}
 }
 .tabs {
 	background-color: #3e657d;
-	padding: .75rem .5rem .5rem .5rem;
 }
 .tab-content {
 	border-top: none;
 	border-radius: 0;
 	background-color: #f5f5f5;
-	margin-bottom: 0.2rem;
+	margin-bottom: 0;
 	padding: 0 1rem;
 }
 .tab-card-header {
@@ -1694,7 +1693,7 @@ input#readMore_check_id {display:none;}
     border-left: 1px solid #deebec;
 }
 .card-header {
-	padding: .5rem .25rem 0rem .25rem;
+	padding: .75rem 0rem 0rem 0rem;
 }
 div[aria-hidden='true'] {
 	display: none;
