Issue 754  Keyboard and accessible navigation for tabs on search pages (transactions, specimens)

--- a/shared/css/custom_styles.css
+++ b/shared/css/custom_styles.css
@@ -1705,13 +1705,9 @@ div[aria-hidden='true'] {
 div[aria-hidden='false'] {
 	display: block;
 }
-div.tab-content[role='tabpanel'] {
-	display:none;
+.hidden {
+	display: none;
 }
-div.tab-content[role='tabpanel'].show{
-	display:block;
-}
-
 /************end tabs -- redone for accessibility  ***************/
 
 
