Issue 754  Keyboard and accessible navigation for tabs on search pages (transactions, specimens)

--- a/shared/css/custom_styles.css
+++ b/shared/css/custom_styles.css
@@ -1708,6 +1708,7 @@ div[aria-hidden='false'] {
 .hidden {
 	display: none;
 }
+.show.hidden {display:block!important}
 /************end tabs -- redone for accessibility  ***************/
 
 
