Issue 754  Keyboard and accessible navigation for tabs on search pages (transactions, specimens)

--- a/shared/css/custom_styles.css
+++ b/shared/css/custom_styles.css
@@ -1708,7 +1708,8 @@ div[aria-hidden='false'] {
 .hidden {
 	display: none;
 }
-.show.hidden {display:block!important}
+.tab-content.blockit {display:none!important}
+.tab-content.show {display:block!important}
 /************end tabs -- redone for accessibility  ***************/
 
 
