Issue 754  Keyboard and accessible navigation for tabs on search pages (transactions, specimens)

--- a/shared/css/custom_styles.css
+++ b/shared/css/custom_styles.css
@@ -1701,6 +1701,7 @@ button[tabindex="-1"]:focus {
 }
 .tab-content[aria-hidden='true'] {
 	display: none;
+	outline:0;
 }
 .tab-content[aria-hidden='false'] {
 	display: block;
