Issue 754  Keyboard and accessible navigation for tabs on search pages (transactions, specimens)

--- a/shared/css/custom_styles.css
+++ b/shared/css/custom_styles.css
@@ -1682,6 +1682,8 @@ input#readMore_check_id {display:none;}
 	cursor: pointer;
 	border-right: 1px solid white;
     border-left: 1px solid white;
+	box-shadow: none;
+    outline: 0;
 }
 .tab-headers button[aria-selected='false'] {
 	color: black;
