--- a/shared/css/custom_styles.css
+++ b/shared/css/custom_styles.css
@@ -1687,6 +1687,11 @@ input#readMore_check_id {display:none;}
 	border-left: 1px solid #96EcED;
     outline: 0;
 }
+.tab-headers button[aria-selected='true']:focus {
+		border-right: 1px solid #96ECED;
+	border-left: 1px solid #96EcED;
+	border-top: 1px solid: #96Eced;
+}
 .tab-headers button[aria-selected='false'] {
 	color: black;
 	background-color: #f5f5f5;
