--- a/shared/css/custom_styles.css
+++ b/shared/css/custom_styles.css
@@ -1718,6 +1718,7 @@ button[tabindex="-1"]:focus {
 .hidden {
 	display: none;
 }
+.show {display:block;}
 
 /************end tabs -- redone for accessibility  ***************/
 
