--- a/shared/css/custom_styles.css
+++ b/shared/css/custom_styles.css
@@ -741,9 +741,9 @@ a#showLeftPush.hiddenclass {
 }
 #regForm input {
 	display: block;
-	height: calc(1.2em + .125rem + 2px);
-	padding: .25rem .5rem;
-	font-size: 1rem;
+	height: calc(1.2em + .15rem + 2px);
+	padding: .3rem .5rem;
+	font-size: .875rem;
 	font-weight: 400;
 	line-height: 1.2rem;
 	color: #495057;
