ISSUE  705  PUROSE: Data Entry  DESC: First mobile screen

--- a/shared/css/custom_styles.css
+++ b/shared/css/custom_styles.css
@@ -754,6 +754,7 @@ a#showLeftPush.hiddenclass {
 	transition: border-color .15s ease-in-out, box-shadow .15s ease-in-out;
 	width: 100%;
 }
+#regForm select {font-size: .875rem;}
 
 /* Mark input boxes that gets an error on validation: */
 #regForm input.invalid, #regForm select.invalid {
