--- a/shared/css/custom_styles.css
+++ b/shared/css/custom_styles.css
@@ -777,6 +777,7 @@ a#showLeftPush.hiddenclass {
 	border-radius: 50%;
 	display: inline-block;
 	opacity: 0.85;
+	padding: 3px;
 	color: #333;
 }
 #regForm .step.active {
