--- a/shared/css/custom_styles.css
+++ b/shared/css/custom_styles.css
@@ -8,8 +8,8 @@ body, html {
 input.reqdClr, select.reqdClr, textarea.reqdClr {
 	background-color: #E4E476 !important;
 	border: 1px solid #bac5c6 !important;
-	outline:none;
-	border-radius:.2rem;
+	outline: none;
+	border-radius: .2rem;
 }
 input.badPick, select.badPick, textarea.badPick {
 	background-color: #FF3366 !important;
@@ -17,7 +17,7 @@ input.badPick, select.badPick, textarea.badPick {
 input.goodPick, select.goodPick, textarea.goodPick {
 	background-color: rgba(173, 236, 199, 0.3) !important;
 }
-#taxon_form label, #taxon_form2 label{
+#taxon_form label, #taxon_form2 label {
 	font-size: .8rem;
 	line-height: 1.02;
 	font-weight: 450;
@@ -25,8 +25,12 @@ input.goodPick, select.goodPick, textarea.goodPick {
 .small90 {
 	font-size: 89%
 }
-a {cursor: pointer}
-
+.font-weight-lessbold {
+	font-weight: 500;
+}
+a {
+	cursor: pointer
+}
 /** Styling of external links out, shared with production **/
 .external:after {
 	text-decoration: none !important;
@@ -47,6 +51,18 @@ a.external:visited:after {
 a.external:hover:visited:after {
 	text-decoration: none !important;
 	content: "\a0" url(/shared/images/linkOutHover.gif);
+}
+.imgsize:nth-child(3n+1) {
+	width: 31.5%;
+	margin: 0;
+}
+.imgsize:nth-child(3n+2) {
+	width: 31.5%;
+	margin: 0;
+}
+.imgsize:nth-child(3n+3) {
+	width: 31.5%;
+	margin: 0 2%;
 }
 /*********************************************/
 /* BELOW  Misc. Additions to Bootstrap Styles*/
